--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,10 +1,32 @@
 .timer {
   margin: 0 auto;
   text-align: center;
+}
+
+.counter {
+  width: 100px;
+  display: inline-block;
+}
+
+.btnUp {
+  display: inline-block;
+  width: 50px;
+  margin-right: 10px;
+}
+
+.btnDown {
+  display: inline-block;
+  width: 50px;
+}
+
+.btnStart {
+  margin: 0 auto;
+  text-align: center;
   display: block;
   margin-top: 25px;
 }
 
 p {
   font-size: 75px;
+  margin: 0 auto;
 }
