--- a/public/style/style.css
+++ b/public/style/style.css
@@ -8,22 +8,34 @@
   display: inline-block;
 }
 
+.buttons {
+  margin: 0 auto;
+  text-align: center;
+}
+
 .btnUp {
+  margin: 0 auto;
+  text-align: center;
   display: inline-block;
+  margin-top: 25px;
   width: 50px;
-  margin-right: 10px;
 }
 
 .btnDown {
+  margin: 0 auto;
+  text-align: center;
   display: inline-block;
+  margin-top: 25px;
   width: 50px;
 }
 
 .btnStart {
   margin: 0 auto;
   text-align: center;
-  display: block;
+  display: inline-block;
   margin-top: 25px;
+  width: 50px;
+  background-color: lightgreen;
 }
 
 p {
