--- a/public/style/style.css
+++ b/public/style/style.css
@@ -16,17 +16,41 @@
 .btnUp {
   margin: 0 auto;
   text-align: center;
-  display: inline-block;
   margin-top: 25px;
-  width: 50px;
+  width: 70px;
+
+  cursor: pointer;
+  color: #fff;
+  background: #2cb1bc;
+  border: transparent;
+  border-radius: 0.25rem;
+  letter-spacing: 1px;
+  padding: 0.375rem 0.75rem;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  transition: 0.3s ease-in-out all;
+  text-transform: capitalize;
+  display: inline-block;
 }
 
 .btnDown {
   margin: 0 auto;
   text-align: center;
-  display: inline-block;
   margin-top: 25px;
-  width: 50px;
+  width: 70px;
+
+  cursor: pointer;
+  color: #fff;
+  background: #2cb1bc;
+  border: transparent;
+  border-radius: 0.25rem;
+  letter-spacing: 1px;
+  padding: 0.375rem 0.75rem;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  transition: 0.3s ease-in-out all;
+  text-transform: capitalize;
+  display: inline-block;
 }
 
 .btnStart {
@@ -34,8 +58,19 @@
   text-align: center;
   display: inline-block;
   margin-top: 25px;
-  width: 50px;
-  background-color: lightgreen;
+  width: 60px;
+  background-color: rgb(92, 179, 92);
+
+  cursor: pointer;
+  color: #fff;
+  border: transparent;
+  border-radius: 0.25rem;
+  letter-spacing: 1px;
+  padding: 0.375rem 0.75rem;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  transition: 0.3s ease-in-out all;
+  text-transform: capitalize;
 }
 
 p {
