ref: adds predefined timer; saves time set by user

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -73,6 +73,26 @@
   text-transform: capitalize;
 }
 
+.btn {
+  margin: 0 auto;
+  text-align: center;
+  display: inline-block;
+  margin-top: 25px;
+  width: 70px;
+  background-color: rgb(92, 179, 143);
+
+  cursor: pointer;
+  color: #fff;
+  border: transparent;
+  border-radius: 0.25rem;
+  letter-spacing: 1px;
+  padding: 0.375rem 0.75rem;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  transition: 0.3s ease-in-out all;
+  text-transform: capitalize;
+}
+
 .disable {
   opacity: 50%;
 }
