changes node version from 16 to 19

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -8,6 +8,18 @@
   display: inline-block;
 }
 
+.alert {
+  width: 250px;
+  height: 70px;
+  background-color: rgb(136, 255, 0);
+  margin: 0 auto;
+  margin-top: 30px;
+}
+
+.alertY {
+  background-color: rgb(255, 0, 0);
+}
+
 .buttons {
   margin: 0 auto;
   text-align: center;
